# chess-engine

./: CMakeLists.txt  README.md  main.cpp
inc/: bitboard.h  board.h  defs.h  engine.h  log.h  misc.h  moon.h  moon_bitboard.h  moon_board.h  moon_log.h  moon_type.h  moon_util.h  move_list.h  test.h  uci.h  util.h
old/: board.cpp  defs.h  engine.h  util.cpp  util.h
src/: bitboard.cpp  board.cpp  engine.cpp  moon_board.cpp  moon_log.cpp  test.cpp  uci.cpp
test/: test_bitboard.cpp  test_board.cpp  test_util.cpp
